products controllers + swagger docs
